sandbox/output
fizzbuzz_tests.c: In function 'fizzbuzzTests':
fizzbuzz_tests.c:46:5: error: 'main' is normally a non-static function [-Werror=main]
 int main(void)
     ^
fizzbuzz_tests.c:51:1: error: expected declaration or statement at end of input
 }
 ^
cc1: all warnings being treated as errors
make: *** [test] Error 1
